packages/sdk/tests/fixtures/negative/raw-network.fixture.ts
import "axios";

void fetch;
void EventSource;
